sumo/tests/duarouter/trips/errors/vehicle_false_arrivallane/errors.duarouter
Error: Invalid arrivalLane definition for vehicle '';
 must be one of ("current", or an int>=0)
Quitting (on error).
